# Visionify-Backend

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
backend/: config.py  main.py
backend/model_services/: constants.py  dependencies.py  entities.py  routers.py  views.py
